# buddy-benchmark

benchmarks/Vectorization/: CMakeLists.txt
benchmarks/Vectorization/linpackc/: CMakeLists.txt
benchmarks/Vectorization/linpackc/Daxpy/: CMakeLists.txt  Daxpy.cpp  Daxpy.h  MLIRLinpackCDaxpyBenchmark.cpp
benchmarks/Vectorization/linpackc/Ddot/: CMakeLists.txt  Ddot.cpp  Ddot.h  MLIRLinpackCDdotBenchmark.cpp  MLIRLinpackCDdotRollF32.mlir  MLIRLinpackCDdotRollF64.mlir  MLIRLinpackCDdotUnrollF32.mlir  MLIRLinpackCDdotUnrollF64.mlir
benchmarks/Vectorization/linpackc/Dgefa/: CMakeLists.txt  Dgefa.cpp  Dgefa.h  MLIRLinpackCDgefaBenchmark.cpp  MLIRLinpackCDgefaF64.mlir  MLIRLinpackCDgefaRollF32.mlir
benchmarks/Vectorization/linpackc/Dgesl/: CMakeLists.txt  Dgesl.cpp  Dgesl.h  MLIRLinpackCDgeslBenchmark.cpp  MLIRLinpackCDgeslF32.mlir  dgesl.c
benchmarks/Vectorization/linpackc/Dmxpy/: CMakeLists.txt  Dmxpy.cpp  Dmxpy.h  MLIRLinpackCDmxpyBenchmark.cpp  MLIRLinpackCDmxpyF32.mlir  MLIRLinpackCDmxpyF64.mlir
benchmarks/Vectorization/linpackc/Dscal/: CMakeLists.txt  Dscal.cpp  Dscal.h  MLIRLinpackCDscalBenchmark.cpp  MLIRLinpackCDscalRollF32.mlir  MLIRLinpackCDscalRollF64.mlir  MLIRLinpackCDscalUnrollF32.mlir  MLIRLinpackCDscalUnrollF64.mlir
benchmarks/Vectorization/linpackc/Epslon/: CMakeLists.txt  Epslon.cpp  Epslon.h  MLIRLinpackCEpslonBenchmark.cpp  MLIRLinpackCEpslonF32.mlir  MLIRLinpackCEpslonF64.mlir
benchmarks/Vectorization/linpackc/Idamax/: CMakeLists.txt  Idamax.cpp  Idamax.h  MLIRLinpackCIdamaxBenchmark.cpp  MLIRLinpackCIdamaxF32.mlir  MLIRLinpackCIdamaxF64.mlir
benchmarks/Vectorization/linpackc/Matgen/: CMakeLists.txt  MLIRLinpackCMatgenBenchmark.cpp  MLIRLinpackCMatgenF32.mlir  MLIRLinpackCMatgenF64.mlir  Matgen.cpp  Matgen.h
